Fixed profile picture not showing

--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ header nav {
   justify-content: flex-end;
 }
 header nav .nav-left-section {
-  width: 480px;
+  width: 1400px;
   height: auto;
   display: flex;
   list-style: none;
@@ -48,7 +48,7 @@ nav .nav-right-section .menu-icon {
   width: 25px;
   height: 25px;
 }
-nav .nav-right-section img {
+nav .nav-right-section a img {
   border-radius: 50%;
   margin-left: 10px;
 }
